# qiskit-paulice

./: CITATION.bib  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yaml
.github/workflows/: README.md  citation.yml  coverage.yml  docs.yml  release.yml  test_development_versions.yml  test_latest_versions.yml  test_minimum_versions.yml
docs/: conf.py  index.rst  install.rst
docs/apidocs/: index.rst  qiskit_paulice.checked_circuit.rst  qiskit_paulice.checks.rst  qiskit_paulice.layout.rst  qiskit_paulice.noise_models.rst
docs/guides/: index.rst  low_overhead_error_detection_using_spacetime_codes.ipynb  overview.rst  quickstart.ipynb
docs/tutorials/: 01_low_overhead_error_detection_using_spacetime_codes.ipynb  index.rst
python/qiskit_paulice/: __init__.py  checked_circuit.py  checks.py  layout.py  noise_models.py
python/qiskit_paulice/_internal/: __init__.py  conversion.py  simulation.py  station.py  utils.py
python/qiskit_paulice/_internal/check_picking/: __init__.py  genetic_search.py  windowed_search.py
releasenotes/notes/: get-check-q-e1d6b058f89fc12e.yaml  shallow-fixes-831441881ad1dafc.yaml
releasenotes/notes/0.1.1/: pyo3-vuln-0be650e313ba251d.yaml
releasenotes/notes/0.2/: get-check-q-e1d6b058f89fc12e.yaml
releasenotes/notes/0.2.1/: incomp-basis-7b2b6217476924f9.yaml
src/: check_decoder.rs  check_evaluator.rs  check_group.rs  check_picker.rs  circuit_building.rs  coverage.rs  decoding.rs  kraus.rs  lib.rs  metric.rs  noise_model.rs  pauli.rs  pauli_propagator.rs  python_interface.rs  scheduling.rs  sparse_pauli.rs  stabilizer_group.rs  utils.rs  wire.rs
test/: test_checked_circuit.py  test_checks.py  test_layout.py  test_noise_models.py
