[package]
name = "_internal-r"
version = "0.1.0"
edition = "2024"

[lib]
name = "_internal_r"
crate-type = ["cdylib"]

[dependencies]
rustiq-core = "0.0.9"
pyo3 = { version = "0.28.3", features = ["extension-module", "abi3-py310"] }
rayon = "1.11.0"
itertools = "0.13.0"
rand = "0.9.2"
rand_distr = "0.5.1"
